--- a/Stage_E.ipynb
+++ b/Stage_E.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOMB9FY3lgzOawyqW6trFF3",
+      "authorship_tag": "ABX9TyOSf0IoDiIuYERampmCcZWj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2536,25 +2536,24 @@
       "cell_type": "code",
       "source": [
         "# assign train and test data\n",
-        "train1 = df_train[:2757]\n",
-        "test1 = df_train[2757:]"
+        "test1 = df_train[3295:]"
       ],
       "metadata": {
         "id": "C6bWiuTmb7s8"
       },
-      "execution_count": 112,
+      "execution_count": 137,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df_Tpred = test1[['ds', 'SysLoad', 'Tmax', 'GasPrice']]\n",
-        "forecast2 = model2.predict(df_Tpred)"
+        "df_test_pred = test1[['ds', 'SysLoad', 'Tmax', 'GasPrice']]\n",
+        "forecast2 = model2.predict(df_test_pred)"
       ],
       "metadata": {
         "id": "NyB10hYncFya"
       },
-      "execution_count": 114,
+      "execution_count": 138,
       "outputs": []
     },
     {
@@ -2570,19 +2569,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FKzI8Cq5cI55",
-        "outputId": "fa4afc42-5290-4d0a-af9e-be75a35efea9"
+        "outputId": "09e3a6b0-5638-43c4-8883-9d6fde0b536b"
       },
-      "execution_count": 115,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "104.96"
+              "143.06"
             ]
           },
           "metadata": {},
-          "execution_count": 115
+          "execution_count": 139
         }
       ]
     },
@@ -2600,19 +2599,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sSjno9uQcaPV",
-        "outputId": "ce0f985e-7f24-4fb6-81d6-5338b566e2f2"
+        "outputId": "5b998c61-6c9e-401e-8fc9-499bb7112157"
       },
-      "execution_count": 116,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2599.61"
+              "1244.75"
             ]
           },
           "metadata": {},
-          "execution_count": 116
+          "execution_count": 140
         }
       ]
     },
@@ -2628,9 +2627,9 @@
           "height": 873
         },
         "id": "wWEIL5GYcdXn",
-        "outputId": "c094d0df-242b-4e13-eb0a-92b8895d33ad"
+        "outputId": "faaceb6d-ce38-4703-cc9f-0ca9401fff12"
       },
-      "execution_count": 117,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "display_data",
